--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoneix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta
+      name="description"
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoneix Park"
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
+    />
 
     <!-- Title -->
     <title>Love Running</title>
@@ -28,7 +34,14 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
-    /> />
   </head>
-  <body></body>
+
+  <body>
+    <!-- Header element with the text "Header" -->
+        <header>Header</header>
+    <!-- Main element with the text "Main Content" -->
+        <main>Main Content</main>
+    <!-- Footer element with the text "Footer" -->
+        <footer>Footer</footer>
+  </body>
 </html>
