Adding styleshet with starter styels 0pad 0mar border-box

--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
     <!-- Header element with the text "Header" -->
-        <header>Header</header>
+    <header>Header</header>
     <!-- Main element with the text "Main Content" -->
-        <main>Main Content</main>
+    <main>Main Content</main>
     <!-- Footer element with the text "Footer" -->
-        <footer>Footer</footer>
+    <footer>Footer</footer>
   </body>
 </html>
