Add logo to header and apply Oswald font

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
   <body>
     <!-- Header element with the text "Header" -->
-    <header>Header</header>
+    <header>
+      <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+      </a>
+    </header>
     <!-- Main element with the text "Main Content" -->
     <main>Main Content</main>
     <!-- Footer element with the text "Footer" -->
