fix:the font probelm by rework the whole index and css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoneix Park"
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park"
     />
     <meta
       name="keywords"
       content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
     />
-
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -34,27 +33,35 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
-    <!-- stylesheet -->
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
-    <!-- Header element with the text "Header" -->
+    <!-- Header -->
     <header>
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
+        <nav>
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">Gallery</a>
+            </li>
+            <li>
+              <a href="">Sign up</a>
+            </li>
+          </ul>
+        </nav>
       </a>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Gallery</a></li>
-          <li><a href="">Sign Up</a></li>
-        </ul>
-      </nav>
     </header>
-    <!-- Main element with the text "Main Content" -->
-    <main>Main Content</main>
-    <!-- Footer element with the text "Footer" -->
+
+    <!-- Main content -->
+    <main>Main content</main>
+
+    <!-- Footer -->
     <footer>Footer</footer>
   </body>
 </html>
