--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+        <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/37ca4f6cf7.js" crossorigin="anonymous"></script>
   </body>
 </html>
